# responsible_ml_use_case

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_download_data.yml  parameters_prepare_data.yml  parameters_preprocess_data.yml  parameters_test_model.yml  parameters_train_model.yml
experiments/: generate_radar_plots_from_runs.py  improved_models.py  initial_models.py  responsible_models.py  test_models.py
src/rml_vision_usecase/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/rml_vision_usecase/pipelines/download_data/: __init__.py  nodes.py  pipeline.py
src/rml_vision_usecase/pipelines/prepare_data/: __init__.py  nodes.py  pipeline.py
src/rml_vision_usecase/pipelines/preprocess_data/: __init__.py  nodes.py  pipeline.py
src/rml_vision_usecase/pipelines/test_model/: __init__.py  nodes.py  pipeline.py
src/rml_vision_usecase/pipelines/train_model/: __init__.py  anonymize_data.py  evaluate_privacy.py  make_radar_plot.py  massage_data.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/monitor_model/: test_pipeline.py
tests/pipelines/prepare_data/: test_pipeline.py
tests/pipelines/preprocess_data/: test_pipeline.py
tests/pipelines/test_model/: test_pipeline.py
